userland: further fixes / WIP kdcelarative+kinfocenter
Signed-off-by: Andreas Müller <schnitzeltony@googlemail.com>

--- a/recipes-graphics/userland/files/egl.pc.in
+++ b/recipes-graphics/userland/files/egl.pc.in
@@ -9,4 +9,4 @@ Requires.private:
 Version: %VERSION%
 Libs.private: 
 Libs: -L${libdir} -lEGL
-Cflags: -I${includedir} -I${includedir}/interface/vcos/pthreads
+Cflags: -I${includedir}
